# Abcdef

./: .gitignore_sample  001_winsys_nosetpixelformat.patch  CMakeLists.txt  MGob.c  Main.cpp  Nxt.cpp  git_rev_cogl_build_at_5.txt  path.bat  path.txt  run_pkg_config.sh
ar/: ha-base.c  ha-base.h  pa-base.c  pa-base.h
cmake/: AlInc.cmake  DoxygenInc.cmake  FindAllegro.cmake  Gob2Inc.cmake  PkgInc.cmake  Unfuck.cmake
cmake/tpl/: README.txt  template2_c.txt  template2_h.txt  template3_ard.c  template3_ard.h  template3_ard_c.txt  template3_ard_h.txt  template4_arh_c.txt  template4_arh_h.txt  template_c.txt  template_gob.txt  tpl.bat  tpl.sh  tpl2.bat  tpl2.sh  tpl_ar.bat  tpl_ar.sh  tpl_arh.bat  tpl_arh.sh  tpl_aux.sh  tpl_aux_ar.sh  tpl_aux_arh.sh  tpl_cmd.bat  tpl_unif_drv.bat  tpl_unif_drv.sh  tpl_unif_list.txt
doc/: CMakeLists.txt  gob_2_0_18_adh.diff  gob_2_0_18_adh_002.diff
doc/doxygen_main/: CMakeLists.txt  Doxyfile  customdoxygen.css  footer.html  header.html
misc/: mtest1.blend  mtest1.dae
src/: Nxt.c  Nxt.cpp  Nxt.h  ab-cd-alt.gob  ab-cd-alt_funcs.c  ab-cd-alt_funcs.h  ab-cd.gob  ai_example.c  ai_example.h  array_macro.c  array_macro.h  cogl_include.h  error.h  gfx_lib_setup.c  gfx_lib_setup.h  info_win.c  info_win.h  mai-anim-instance.gob  mai-anim-instance_funcs.c  mai-anim-instance_funcs.h  mai-anim.gob  mai-anim_funcs.c  mai-anim_funcs.h  mai-bone.gob  mai-bone_funcs.c  mai-bone_funcs.h  mai-info-win.gob  mai-info-win_funcs.c  mai-model.gob  mai-model_funcs.c  mai-model_funcs.h  mai-node-anim.gob  mai-node-anim_funcs.c  mai-node-anim_funcs.h  mai-node.gob  mai-node_decls.c  mai-node_decls.h  mai-node_funcs.c  mai-node_funcs.h  misc.c  (+1 more)
src/mgob/: CMakeLists.txt  main.c  mgob-x1.gob  mgob-x1_funcs.c  nx-base.gob  nx-derived.gob  nx-derived_funcs.c  nx-derived_funcs.h  test_gvalue.c
src/test/: CMakeLists.txt  m-tfmsg-fbup.gob  m-tfmsg-fbup_.c  m-tfmsg-heartbeat.gob  m-tfmsg-heartbeat_funcs.c  m-tfmsg-redraw.gob  m-tfmsg-redraw_.c  m-tfmsg.gob  m-tfmsg_funcs.c  m-tfthread.gob  m-tfthread_.c  m-tfthreadal.gob  m-tfthreadal_.c  m-tfthreadallegro.gob  m-tfthreadallegro_.c  m-tfthreadcogl.gob  m-tfthreadcogl_.c  tf-gfx-threads.gob  tf-gfx-threads_.c
src/test/ar/: ab-cd-ef.c  ab-cd-ef.h  ar1.c
src/test/context_switch/: csw.c
src/test/gl1/: main.c  vshd_src.h
src/test/lua/: CMakeLists.txt  crctx.c  lua1.c  tf-act.gob  tf-act_.c
src/test/model_anim/: ma.c  ma.h
src/test/model_skin/: ms.c  mt_yield.c  nx_mat.c  nx_mat.h  rec.c  sr.c  sr.h  sr_main.c  sr_mt.c  sr_p.c
