GOB2IZE(nx-base.gob)
GOB2IZE(nx-derived.gob)

ADD_EXECUTABLE(mgob2 main.c
 ${CMAKE_CURRENT_BINARY_DIR}/nx-base.c
 ${CMAKE_CURRENT_BINARY_DIR}/nx-derived.c)
TARGET_LINK_LIBRARIES(mgob2 ${GTK2_LIBRARIES})

GOB2IZE(mgob-x1.gob)

ADD_EXECUTABLE(test_gvalue test_gvalue.c
 ${CMAKE_CURRENT_BINARY_DIR}/mgob-x1.c)
TARGET_LINK_LIBRARIES(test_gvalue ${GTK2_LIBRARIES})
SET_TARGET_PROPERTIES(test_gvalue PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
